--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 
 .btn:hover {
   background-color: transparent;
-  color: black;
+  color: #4e47ff;
   border: 1px solid #4e47ff;
   cursor: pointer;
   font-size: 1.25em;
@@ -84,7 +84,7 @@ nav {
 
 .action-title {
   font-size: 42px;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 
@@ -129,6 +129,7 @@ nav {
 
 .productive-container p {
   font-size: 20px;
+  color: #757575;
 }
 
 /* users styles */
@@ -154,6 +155,7 @@ nav {
   text-align: left;
   border: 0.5px solid rgba(78, 71, 255, 0.1);
   border-radius: 15px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .card h4 {
@@ -197,13 +199,13 @@ nav {
 
 .focus h3 {
   font-size: 50px;
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .focus p {
   margin: 20px 0px;
   font-size: 16px;
-  color: #8987a1;
+  color: #757575;
 }
 
 .focus img {
@@ -239,6 +241,7 @@ nav {
   border-radius: 10px;
   width: 500px;
   margin-bottom: 20px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form-text textarea {
@@ -247,6 +250,7 @@ nav {
   border-radius: 10px;
   width: 500px;
   margin-bottom: 20px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form-text button {
@@ -281,7 +285,7 @@ footer p {
 
 .footer-text {
   font-size: 20px;
-  color: #8987a1;
+  color: #757575;
 }
 
 .footer-links {
@@ -295,7 +299,7 @@ footer p {
 
 .footer-links li a {
   text-decoration: none;
-  color: #8987a1;
+  color: #757575;
 }
 
 .footer-links li a:hover {
